--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
 
 
 
+
 svg{
     width: 25px;
 }
@@ -861,6 +862,7 @@ header .menu{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 
@@ -983,3 +985,98 @@ figure.snip1200.hover p {
   text-align: center;
 }
 
+
+.card-slider {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  width: 100%;
+  position: relative;
+}
+
+.card-content {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  scroll-snap-type: x mandatory;
+  width: calc(100% - 120px); /* Adjust according to button size */
+}
+
+.card {
+  flex: 0 0 auto;
+  width: 400px;
+  height: 200px;
+  margin: 0 10px;
+  border-radius: 10px;
+  position: relative;
+ 
+  scroll-snap-align: center;
+  overflow: hidden; /* Ensure content stays within the card */
+}
+
+.card-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 0; /* Behind the text */
+}
+
+.card-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card-text {
+  position: absolute;
+  width: 100%;
+  top: 85%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  background: rgba(0, 0, 0, 0.5); 
+  padding: 2px 0 0 0;
+  border-radius: 5px;
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+.btn{
+  min-width:60px;
+  margin:auto 30px;
+  height:60px;
+  border-radius:30px;
+  background:#e7e7e7;
+  border:0px;
+  outline:none;
+  cursor:pointer;
+  z-index:9999;
+  box-shadow: 0px 0px 0px 0px rgba(0,0,0,.08);
+  transition: all .25s ease;
+}
+
+.btn:hover{
+  box-shadow: 0px 17px 35px 0px rgba(0,0,0,.07);
+}
+
+.btn i {
+  font-size:1.2rem;
+}
+
+
+#previous {
+  left: 10px;
+}
+
+#nextone {
+  right: 10px;
+}
