--- a/style.css
+++ b/style.css
@@ -1080,3 +1080,48 @@ figure.snip1200.hover p {
 #nextone {
   right: 10px;
 }
+
+/*Construction-Project Page */
+
+.project-main{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  background: #e9e9e9;
+  justify-content: center;
+  
+}
+.project-image{
+  width: 700px;
+  padding: 20px;
+  height: 500px;
+  object-fit: cover;
+  margin-right: 2rem;
+  img{
+    width: 700px;
+    height: 500px;
+    object-fit: cover;
+  }
+}
+.project-details{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: #000;
+  table,th,td{
+    text-align: left;
+    border:1px solid rgb(158, 158, 158);
+  border-collapse: collapse;
+  }
+  th,td{
+    padding: 5px;
+  }
+
+}
+.related-projects{
+  background: rgb(212, 212, 232);
+  color: #000;
+  padding: 2rem;
+  align-items: center;
+  text-align: center;
+}
