--- a/style.css
+++ b/style.css
@@ -1125,3 +1125,135 @@ figure.snip1200.hover p {
   align-items: center;
   text-align: center;
 }
+
+/* Solar Energy */
+
+.energy-container {
+  display: flex;
+  flex-direction: row;
+  height: fit-content;
+  width: 100%;
+  
+  .energy-large {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    overflow: hidden;
+    color: white;
+  
+      
+    img {
+      width: 100%;
+      height: 650px;
+      opacity: 0.4;
+      object-fit: cover;
+    }
+   
+
+    .energy-mid {
+      position: absolute;
+      height: 650px;
+      top: 15%;
+      .energy-ltext {
+        
+        align-items: center;
+        text-align: left;
+        width: 45rem;
+        height: fit-content;
+        padding: 1rem 1rem 1rem 5rem;
+        h1{
+        color: white;
+        font-size: 2.5rem;
+    }}}}}
+
+    .energy-second-container{
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      background: #ececec;
+      color: #000000;
+      padding-bottom: 4rem;
+      .second-details-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding-bottom: 2rem;
+        h2{
+          width: 24rem;
+        }
+        p{
+          width: 55rem;
+        }
+      }
+      .details-images-container{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        .detail-image{
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          text-align: center;
+          width: 22rem;
+          height: 15rem;
+
+        img{
+          border: 2px solid black;
+          width: 22rem;
+          height: 12rem;
+        }
+      }
+      }
+    }
+
+    .energy-projects-container{
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      color: black;
+      background: #bdbdbd;
+      text-align: center;
+      .energy-project{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        padding-bottom: 2rem;
+        
+        .energy-project-image{
+          flex: 1;
+          width: 50rem;
+          height: 20rem;
+          
+          
+          img{
+            width: 40rem;
+            height: 20rem;
+            border: 2px solid black;
+          }
+        }
+        .energy-project-details{
+          flex: 1;
+          width: 20rem;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          
+          table,th,td{
+            width: 10rem;
+            padding: 2px;
+            text-align: left;
+            border:1px solid black;
+          border-collapse: collapse;
+          }
+          table{
+            width: 10rem;
+            padding-left: 10rem;
+          }
+        }
+      }
+    }
