--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
     background-color: #010101;
     color: #eee;
     width: 100%;
+    overflow-x: hidden;
 }
 
 
@@ -1257,3 +1258,130 @@ figure.snip1200.hover p {
         }
       }
     }
+
+    /* Logistics Page */
+
+    .logistics-container {
+      display: flex;
+      flex-direction: row;
+      height: fit-content;
+      width: 100%;
+      
+      .logistics-large {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        overflow: hidden;
+        color: white;
+      
+          
+        img {
+          width: 100%;
+          height: 550px;
+          opacity: 0.4;
+          object-fit: cover;
+        }
+       
+    
+        .logistics-mid {
+          position: absolute;
+          height: 650px;
+          top: 15%;
+          .logistics-ltext {
+            
+            align-items: center;
+            text-align: left;
+            width: 45rem;
+            height: fit-content;
+            padding: 1rem 1rem 1rem 5rem;
+            h1{
+            color: white;
+            font-size: 2.5rem;
+        }}}}}
+
+        .logistics-second-container{
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          background: rgb(225, 225, 225);
+          padding-bottom: 2rem;
+          color: #000;
+          .logistics-services-container{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            padding:2rem;
+            a{
+              text-decoration: none;
+              color: rgb(0, 0, 0);
+            .custom-solution{
+              background: #7e98ff;
+              border-radius: 60px;
+              width: 4rem;
+              height: 4rem;
+              text-align: center;
+              padding: 1rem;
+            }
+          }
+          }
+          .logistics-services {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 10px; 
+            .service {
+              width: 150px; 
+              height: 150px;
+              background-color: #007bff;
+              clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              justify-content: center;
+              color: white; 
+              font-size: 16px;
+              text-align: center;
+              margin: 5px;
+              i {
+                font-size: 32px; 
+                margin-bottom: 10px; 
+            }
+            p {
+              margin: 0; 
+              font-size: 14px; 
+          }
+          
+          }
+        }
+        }
+
+        .freight-forwarding-main{
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          color: #000;
+          background: #f1f1f1;
+          .freight-forwarding-details{
+            width: 40%;
+              padding: 5rem 5rem 3rem 5rem;
+          .freight-forwarding-text{
+              height: 80%;
+              h2{
+                font-size: 2.5rem;
+              }
+
+              
+          }
+        }
+          .freight-forwarding-image{
+            width: 50%;
+            height: 500px;
+            img{
+              object-fit: cover;
+              height: 500px;
+              width: 100%;
+            }
+            
+          }
+        }
