--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ header .menu{
     float: right;
     font-size: 18px;
     padding-top: 0.5rem;
+    padding-right: 2rem;
   }
   
   .nav > .nav-links > a {
@@ -158,7 +159,7 @@ header .menu{
     width: 100%;
     max-width: 100vw;
     height: 700px;
-    margin-top: -50px;
+    /* margin-top: -50px; */
     position: relative;
     overflow: hidden;
 }
@@ -192,6 +193,7 @@ header .menu{
     max-width: 100vw;
     height: 100%;
     object-fit: cover;
+    filter: brightness(50%)
 }
 .slider .buttons{
     position: absolute;
