--- a/style.css
+++ b/style.css
@@ -983,9 +983,10 @@ figure.snip1200.hover p {
 .projects-main-div{
   background: rgb(212, 212, 232);
   color: #000;
-  padding: 2rem;
+  padding: 2rem 2rem 4rem 2rem;
   align-items: center;
   text-align: center;
+
 }
 
 
@@ -1559,4 +1560,102 @@ figure.snip1200.hover p {
           flex-direction: column;
       }
   }
+
+
+
+  /* Careers */
+    .careers-wrapper{
+      background: #eeeeee;
+    }
+  .careers-header {
+    font-size: 24px;
+    font-weight: 500;
+    color: #ff3433;
+    margin-bottom: 20px;
+    text-align: left;
+}
+
+.form-wrapper-unique {
+    display: flex;
+    justify-content: center;
+    padding: 20px 20px 40px 20px;
+    color: #000;
+}
+
+.form-container-unique {
+    background-color: #f8f9fa;
+    padding: 20px 20px 40px 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 500px;
+    text-align: center;
+}
+
+.form-title-unique {
+    margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.form-row-unique {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
+    text-align: left;
+}
+
+.form-group-unique {
+    flex: 1;
+}
+
+.label-unique {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.input-unique {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ced4da;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.required-unique {
+    color: red;
+}
+
+.form-submit-unique {
+    text-align: center;
+    margin-top: 30px;
+}
+
+.button-unique {
+    background-color: #ff3433;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+}
+
+.button-unique:hover {
+    background-color: #f92626;
+}
+
+/* Responsive Design */
+@media (max-width: 576px) {
+    .careers-header {
+        text-align: center;
+        margin-bottom: 10px;
+    }
     
+    .form-row-unique {
+        flex-direction: column;
+        gap: 10px;
+    }
+}
