--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ header .menu{
   
   .nav > .nav-links > a {
     display: inline-block;
-    padding: 13px 10px 13px 10px;
+    padding: 13px 10px 13px 50px;
     text-decoration: none;
     color: #ff3433;
   }
@@ -105,7 +105,7 @@ header .menu{
     display: none;
   }
   
-  @media (max-width:600px) {
+  @media (max-width:768px) {
     .nav > .nav-btn {
       display: inline-block;
       position: absolute;
@@ -158,8 +158,7 @@ header .menu{
 .slider{
     width: 100%;
     max-width: 100vw;
-    height: 700px;
-    /* margin-top: -50px; */
+    height: 80vh;
     position: relative;
     overflow: hidden;
 }
@@ -227,6 +226,11 @@ header .menu{
         }
     }
     
+
+    .slider .buttons{
+      display: none;
+    }
+    
 }
 
 @media screen and (max-width: 768px){
@@ -235,8 +239,8 @@ header .menu{
     }
    
         .slider .list .item .company-brief{
-            padding: 4rem;
-            width: 20rem;
+            padding: 4rem 0 4rem 1rem;
+            width: 20%;
             top: 15%;
             
             h3{
@@ -325,7 +329,7 @@ header .menu{
     flex-wrap: column;
     align-items: center;
     justify-content: center;
-    background: #e6e6e7;
+    background: rgb(234, 234, 234);
     width: 100%;
     padding: 2rem 0;
 }
@@ -405,7 +409,7 @@ header .menu{
 /* Container for the slider */
 .container {
     width: 100%;
-    background: #eee;
+    background: rgb(234, 234, 234);;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -848,14 +852,14 @@ header .menu{
 
 
 .construction-second-div{
-  background: rgb(212, 212, 232);
+  background: rgb(253, 253, 253);
   color: #000;
   padding: 2rem;
   align-items: center;
   text-align: center;
 }
 .construction-third-div{
-  background: rgb(223, 223, 223);
+  background: rgb(234, 234, 234);
   color: #000;
   padding: 2rem;
   align-items: center;
@@ -893,6 +897,8 @@ figure.snip1200 * {
 }
 figure.snip1200 img {
   max-width: 100%;
+  height: 100%;
+  object-fit: cover;
   position: relative;
   opacity: 0.9;
 }
@@ -981,7 +987,7 @@ figure.snip1200.hover p {
 
 
 .projects-main-div{
-  background: rgb(212, 212, 232);
+  background: rgb(255, 255, 255);
   color: #000;
   padding: 2rem 2rem 4rem 2rem;
   align-items: center;
@@ -1059,7 +1065,7 @@ figure.snip1200.hover p {
   margin:auto 30px;
   height:60px;
   border-radius:30px;
-  background:#e7e7e7;
+  background:#ff3433;
   border:0px;
   outline:none;
   cursor:pointer;
@@ -1175,7 +1181,7 @@ figure.snip1200.hover p {
       width: 100%;
       display: flex;
       flex-direction: column;
-      background: #ececec;
+      background: rgb(234, 234, 234);
       color: #000000;
       padding-bottom: 4rem;
       .second-details-container{
@@ -1187,6 +1193,9 @@ figure.snip1200.hover p {
         padding-bottom: 2rem;
         h2{
           width: 24rem;
+          span{
+            color: #ff3433;
+          }
         }
         p{
           width: 55rem;
@@ -1220,8 +1229,23 @@ figure.snip1200.hover p {
       flex-direction: column;
       justify-content: center;
       color: black;
-      background: #bdbdbd;
+      background: rgb(255, 255, 255);
       text-align: center;
+      .energy-container-heading{
+        font-size: 3rem;
+        color: white;
+        width: 100%;
+        background: #000;
+        margin-top: 0;
+        span{
+          color: #ff3433;
+        }
+      }
+      .Project-Name{
+        span{
+          color: #ff3433;
+        }
+      }
       .energy-project{
         display: flex;
         flex-direction: row;
@@ -1262,12 +1286,95 @@ figure.snip1200.hover p {
       }
     }
 
+    @media (max-width: 768px) {
+
+      .energy-container {
+        
+        width: 100%;
+        
+        .energy-large {
+         height: 100vh;
+          img {
+            height: 100vh;
+          }
+         
+      
+          .energy-mid {
+          .energy-ltext {
+              width: 95%;
+              padding: 1rem 1rem 1rem 1rem;
+              }}}}
+
+      .energy-second-container{
+        padding-bottom: 2rem;
+        .second-details-container{
+         padding-bottom: 1rem;
+          h2{
+            width: 70%;
+            }
+          p{
+            width: 90%;
+          }
+        }
+        .details-images-container{
+          flex-direction: column;
+          justify-content: center;
+          .detail-image{
+            width: 90%;
+            height: 15rem;
+            padding-left: 1rem;
+          img{
+            width: 100%;
+          }
+        }
+        }
+      }
+      .energy-projects-container{
+        .energy-container-heading{
+          font-size: 2rem;
+        }
+        
+        .energy-project{
+          flex-direction: column !important;
+          justify-content: center !important;
+          padding-bottom: 2rem;
+          
+          .energy-project-image{
+            width: 90% !important;
+            padding:0 1.5rem;
+            
+            img{
+              width: 100% !important;
+            }
+          }
+          .energy-project-details{
+            width: 100%;
+            padding:0 3.5rem ;
+            table,th,td{
+              width: 10rem;
+              padding: 2px;
+              text-align: left;
+              border:1px solid black;
+            border-collapse: collapse;
+            }
+            table{
+              width: 10rem;
+              padding-left: 10rem;
+            }
+          }
+        }
+      }
+      }
+
+    
+
+    
     /* Logistics Page */
 
     .logistics-container {
       display: flex;
       flex-direction: row;
-      height: fit-content;
+      height: 70vh;
       width: 100%;
       
       .logistics-large {
@@ -1281,7 +1388,7 @@ figure.snip1200.hover p {
           
         img {
           width: 100%;
-          height: 550px;
+          height: 100%;
           opacity: 0.4;
           object-fit: cover;
         }
@@ -1307,7 +1414,7 @@ figure.snip1200.hover p {
           width: 100%;
           display: flex;
           flex-direction: column;
-          background: rgb(225, 225, 225);
+          background: rgb(234, 234, 234);
           padding-bottom: 2rem;
           color: #000;
           .logistics-services-container{
@@ -1319,12 +1426,13 @@ figure.snip1200.hover p {
               text-decoration: none;
               color: rgb(0, 0, 0);
             .custom-solution{
-              background: #7e98ff;
+              background: #ff3433;
+              color: white;
               border-radius: 60px;
               width: 4rem;
               height: 4rem;
               text-align: center;
-              padding: 1rem;
+              padding: 1.2rem 1rem 1rem 1rem;
             }
           }
           }
@@ -1336,7 +1444,7 @@ figure.snip1200.hover p {
             .service {
               width: 150px; 
               height: 150px;
-              background-color: #007bff;
+              background-color: #ff3433;
               clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
               display: flex;
               flex-direction: column;
@@ -1388,7 +1496,112 @@ figure.snip1200.hover p {
             
           }
         }
+        .warehouse-main{
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          color: #000;
+          background: #f1f1f1;
+          .warehouse-details{
+            width: 40%;
+              padding: 5rem 5rem 3rem 5rem;
+          .warehouse-text{
+              height: 80%;
+              h2{
+                font-size: 2.5rem;
+              }
 
+              
+          }
+        }
+          .warehouse-image{
+            width: 50%;
+            height: 500px;
+            img{
+              object-fit: cover;
+              height: 500px;
+              width: 100%;
+            }
+            
+          }
+        }
+
+        @media (max-width:768px){
+          .logistics-container {
+            height: 70vh;
+            
+            .logistics-large {
+             
+          
+              .logistics-mid {
+                position: absolute;
+                height: 70vh;
+                top: 15%;
+                .logistics-ltext {
+                  
+                  align-items: center;
+                  text-align: left;
+                  width: 95%;
+                  height: fit-content;
+                  padding: 1rem 1rem 1rem 1rem;
+                  h1{
+                  color: white;
+                  font-size: 2.5rem;
+              }}}}}
+        
+              .freight-forwarding-main{
+                flex-direction: column-reverse;
+                .freight-forwarding-details{
+                  width: 100%;
+                    padding: 1rem 1rem 3rem 1rem;
+                .freight-forwarding-text{
+                    height: 80%;
+                    h2{
+                      margin: 0 1rem;
+                      font-size: 2.5rem;
+                    }
+      
+                    
+                }
+              }
+                .freight-forwarding-image{
+                  width: 100%;
+                  height: 500px;
+                  img{
+                    object-fit: cover;
+                    height: 500px;
+                    width: 100%;
+                  }
+                  
+                }
+              }
+              .warehouse-main{
+                flex-direction: column;
+                .warehouse-details{
+                  width: 100%;
+                    padding: 1rem 1rem 3rem 1rem;
+                .warehouse-text{
+                    height: 80%;
+                    h2{
+                      margin: 0 1rem;
+                      font-size: 2.5rem;
+                    }
+      
+                    
+                }
+              }
+                .warehouse-image{
+                  width: 100%;
+                  height: 500px;
+                  img{
+                    object-fit: cover;
+                    height: 500px;
+                    width: 100%;
+                  }
+                  
+                }
+              }
+            }
         /* Contact Page */
 
         .contact-container {
