--- a/style.css
+++ b/style.css
@@ -14,145 +14,157 @@ body{
 svg{
     width: 25px;
 }
-/* header{
-    width: 100%;
-    max-width: 90%;
-    margin: auto;
-    display: grid;
-    grid-template-columns: 50px 1fr 50px;
-    grid-template-rows: 50px;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    z-index: 100;
-    
-}
-header .logo{
-    padding-top:2.5rem ;
-    width: 2rem;
-    height: fit-content;
-    img{
-        width: 5rem;
-        height: 5rem; 
-    }
-}
-header .menu{
-    padding: 1.5rem 0 0 0;
 
-    margin: 0;
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    font-weight: 500;
-} */
 
-.nav {
-    height: 70px;
-    width: 100%;
-    background-color: #ffffff;
-    color: #ff3433;
-    position: relative;
-  }
-  
-  .nav > .nav-header {
-    display: inline-block;
-   
-    img{
-        width: 4rem;
-        height: 4rem;
-        margin-left: 3rem;
-    }
+.navbar {
+  background-color: #ffffff;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 15px; 
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
-   
-  
 
-  
-  .nav > .nav-header > .nav-title {
-    display: inline-block;
-    font-size: 22px;
-    color: #ff3433;
-    padding: 10px 10px 10px 10px;
+/* Logo */
+.navbar-logo img {
+  width: 4rem;
+  height: 4rem;
+  padding-left: 40px;
+}
+
+
+.navbar-links {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-left: auto;
+  padding-right: 20px; 
+}
+
+.navbar-links a {
+  color: #ff3433;
+  text-decoration: none;
+  padding: 10px 15px;
+  font-size: 18px;
+}
+
+.navbar-links a:hover {
+  background-color: rgb(255, 42, 42);
+  color: white;
+  border-radius: 5px;
+}
+
+
+.dropdown {
+  position: relative;
+}
+
+.dropdown-toggle {
+  cursor: pointer;
+  padding: 10px 15px;
+  font-size: 18px;
+  color: #ff3433;
+  text-decoration: none;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #ffffff;
+  min-width: 200px;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 999;
+}
+
+.dropdown-menu a {
+  display: block;
+  padding: 10px 15px;
+  color: #ff3433;
+  text-decoration: none;
+}
+
+.dropdown-menu a:hover {
+  background-color: rgb(255, 42, 42);
+  color: white;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+
+#navbar-toggle {
+  display: none;
+}
+
+.navbar-toggle-label {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.navbar-toggle-label span {
+  background-color: #ff3433;
+  height: 3px;
+  margin: 5px 0;
+  width: 25px;
+}
+
+@media (max-width: 768px) {
+  .navbar-logo img {
+    padding-left:10px;
   }
-  
-  .nav > .nav-btn {
-    display: none;
-  }
-  
-  .nav > .nav-links {
-    display: inline;
-    float: right;
-    font-size: 18px;
-    padding-top: 0.5rem;
-    padding-right: 2rem;
-  }
-  
-  .nav > .nav-links > a {
-    display: inline-block;
-    padding: 13px 10px 13px 10px;
-    text-decoration: none;
-    color: #ff3433;
-  }
-  
-  .nav > .nav-links > a:hover {
-    background-color: rgb(255, 42, 42);
-    color:white;
-    border-radius: 5px;
-    
-  }
-  
-  .nav > #nav-check {
-    display: none;
-  }
-  
-  @media (max-width:768px) {
-    .nav > .nav-btn {
-      display: inline-block;
-      position: absolute;
-      right: 0px;
-      top: 0px;
-    }
-    .nav > .nav-btn > label {
-      display: inline-block;
-      width: 50px;
-      height: 50px;
-      padding: 20px 13px 1px 25px;
-      
-      background-color: rgba(255, 45, 45, 1);
-    }
-    .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
-      background-color: rgb(255, 28, 28);
-    }
-    .nav > .nav-btn > label > span {
-      display: block;
-      width: 25px;
-      height: 10px;
-      border-top: 2px solid #eee;
-    }
-    .nav > .nav-links {
-      display: block;
+  .navbar-links {
+      position: fixed;
+      top: 70px;
+      left: 0;
+      background-color: #ffffff;
       width: 100%;
-      background-color: #333;
-      height: 0px;
-      transition: all 0.3s ease-in;
-      overflow: hidden;
-      top: 50px;
-      left: 0px;
-    }
-    .nav > .nav-links > a {
-      display: block;
-      padding: 13px 10px 13px 50px;
-      width: 100%;
-    }
-    .nav > #nav-check:not(:checked) ~ .nav-links {
-      height: 0px;
-    }
-    .nav > #nav-check:checked ~ .nav-links {
-      height: calc(100vh - 50px);
+      height: calc(100vh - 70px);
+      flex-direction: column;
+      align-items: flex-start;
+      display: none;
+      z-index: 999;
       overflow-y: auto;
-    }
   }
 
+  .navbar-links a,
+  .dropdown-menu a {
+      width: 100%;
+      padding: 15px;
+  }
+
+  .navbar-links .dropdown {
+      width: 100%;
+  }
+
+  .navbar-links .dropdown-menu {
+      display: block;
+      position: static;
+      box-shadow: none;
+      background-color: transparent;
+  }
+
+  #navbar-toggle:checked + .navbar-toggle-label + .navbar-links {
+      display: flex;
+  }
+
+  .navbar-toggle-label {
+      display: flex;
+      margin-right: 20px;
+  }
+
+  .dropdown-toggle {
+      display: none; 
+  }
+}
 
 /* css slider */
 
@@ -683,6 +695,7 @@ header .menu{
     height: fit-content;
     width: 100%;
     
+    
     .about-l {
       position: relative;
       width: 100%;
@@ -703,14 +716,14 @@ header .menu{
       .about-mid {
         position: absolute;
         height: 700px;
-        top: 1%;
+        top: 3%;
         .about-ltext {
           
           align-items: center;
           text-align: center;
           width: fit-content;
           height: fit-content;
-          padding: 1rem;
+          padding: 2rem 1rem 1rem 1rem;
           h1{
           color: white;
       }
@@ -797,7 +810,7 @@ header .menu{
           object-fit: cover;
         }
         .about-mid {
-          top: 0;
+          top: 2%;
           
           .hexagon-container {
             height: 44rem;
@@ -1099,6 +1112,7 @@ figure.snip1200.hover p {
   display: flex;
   flex-direction: row;
   width: 100%;
+  padding-top: 4rem;
   background: #e9e9e9;
   justify-content: center;
   
@@ -1131,11 +1145,37 @@ figure.snip1200.hover p {
 
 }
 .related-projects{
-  background: rgb(212, 212, 232);
+  background: rgb(255, 255, 255);
   color: #000;
   padding: 2rem;
   align-items: center;
   text-align: center;
+}
+
+@media (max-width: 768px) {
+  .project-main{
+    flex-direction: column; 
+  }
+  .project-image{
+    width: 100%;
+    padding: 20px;
+    height: 500px;
+    object-fit: cover;
+    margin-left: 1rem;
+    img{
+      width: 90%;
+    }
+  }
+  .project-details{
+    margin: 1rem 2rem;
+  }
+  .related-projects{
+    background: rgb(255, 255, 255);
+    color: #000;
+    padding: 2rem;
+    align-items: center;
+    text-align: center;
+  }
 }
 
 /* Solar Energy */
@@ -1176,8 +1216,12 @@ figure.snip1200.hover p {
         padding: 1rem 1rem 1rem 5rem;
         h1{
         color: white;
-        font-size: 2.5rem;
-    }}}}}
+        font-size: 3rem;
+    }
+    p{
+      font-size: 1.1rem;
+    }
+  }}}}
 
     .energy-second-container{
       width: 100%;
