--- a/style.css
+++ b/style.css
@@ -2102,3 +2102,142 @@ figure.snip1200.hover p {
     margin-bottom: 20px;
   }
 }
+
+/* businesses */
+
+.food-container {
+  text-align: center;
+  background: #ffffff;
+  color: black;
+  padding: 20px;
+}
+
+.food-heading {
+  font-size: 2.5em;
+  margin-bottom: 10px;
+}
+
+.food-subheading {
+  font-size: 1.2em;
+  color: #555;
+  margin-bottom: 40px;
+}
+
+.food-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.food-card {
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  transition: transform 0.3s ease;
+}
+
+.food-card:hover {
+  transform: translateY(-10px);
+}
+
+.food-card img {
+  width: 100%;
+  height: auto;
+}
+
+.food-card-content {
+  padding: 20px;
+}
+
+.food-card h3 {
+  font-size: 1.5em;
+  margin: 0;
+}
+
+.food-card p {
+  font-size: 1em;
+  margin-top: 10px;
+}
+
+.food-card.food-wheat {
+  background-color: #ff3433;
+  color: #000;
+}
+
+.food-card.food-pulses {
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.food-card.food-rice {
+  background-color: #ff3433;
+  color: #000000;
+}
+
+.food-card.food-machinery {
+  background-color: #000000;
+  color: #ffffff;
+}
+
+.recycle-item-container {
+  text-align: center;
+  background: white;
+  color: #000;
+  padding: 20px;
+}
+
+.recycle-item-heading {
+  font-size: 2.5em;
+  margin-bottom: 10px;
+}
+
+.recycle-item-subheading {
+  font-size: 1.2em;
+  color: #555;
+  margin-bottom: 40px;
+}
+
+.recycle-item-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.recycle-item-card {
+  background-color: #000000;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  transition: transform 0.3s ease;
+  color: #ffffff;
+}
+
+.recycle-item-card:hover {
+  transform: translateY(-10px);
+}
+
+.recycle-item-card img {
+  width: 100%;
+  height: auto;
+}
+
+.recycle-item-card-content {
+  padding: 20px;
+}
+
+.recycle-item-card h3 {
+  font-size: 1.5em;
+  margin: 0;
+  color: #ffffff;
+}
+
+.recycle-item-card p {
+  font-size: 1em;
+  color: #bbbbbb;
+  margin-top: 10px;
+}
