--- a/style.css
+++ b/style.css
@@ -560,13 +560,15 @@ svg{
  
         /* Footer Container */
         .footer-container {
-          background-color: #0b1d3f;
-          color: #ffffff;
+          background-color: #ffffff;
+          color: #000000;
           padding: 20px 50px;
           display: flex;
           flex-wrap: wrap;
           justify-content: space-between;
           text-align: left;
+          box-shadow:0px 2px 4px #000000;
+
         }
         
         /* Logo and Title */
@@ -611,7 +613,7 @@ svg{
         }
         
         .footer-links ul li a, .footer-business ul li a, .footer-contact ul li a {
-          color: #ffffff;
+          color: #000000;
           text-decoration: none;
         }
         
@@ -633,7 +635,7 @@ svg{
         
         .footer-social a {
           margin: 0 10px;
-          color: #ffffff;
+          color: #000000;
           font-size: 20px;
           text-decoration: none;
         }
@@ -1605,7 +1607,6 @@ figure.snip1200.hover p {
         }
         .freight-red{
           background: #000;
-          color: white;
         }
         .freight-black{
           background: #ff3433;
@@ -1898,6 +1899,8 @@ figure.snip1200.hover p {
   /* Careers */
     .careers-wrapper{
       background: #eeeeee;
+      height: 60vh;
+      margin-top: 70px;
     }
   .careers-header {
     font-size: 24px;
@@ -2130,6 +2133,7 @@ figure.snip1200.hover p {
   height: 250px;
   border-radius: 8px;
   object-fit: cover;
+  object-position: top;
 }
 
 .core-team-name {
