--- a/style.css
+++ b/style.css
@@ -52,7 +52,10 @@ svg{
   padding: 10px 15px;
   font-size: 18px;
 }
-
+.disabled{
+  visibility: hidden;
+  width: 75px;
+}
 .navbar-links a:hover {
   background-color: rgb(255, 42, 42);
   color: white;
@@ -76,9 +79,9 @@ svg{
   display: none;
   position: absolute;
   top: 100%;
-  left: 0;
+  left: 0%;
   background-color: #ffffff;
-  min-width: 200px;
+  min-width: 180px;
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
   z-index: 999;
 }
@@ -2028,7 +2031,18 @@ figure.snip1200.hover p {
   justify-content: center;
   padding: 2rem 0;
 }
-
+.teammember-inner-container {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap; 
+  justify-content: center;
+  padding: 2rem 0;
+}
+.teammember-wrapper{
+  display: flex;
+  gap: 4rem;
+  align-items: center;
+}
 .ceo-wrapper {
   display: flex;
   gap: 4rem;
@@ -2056,6 +2070,12 @@ figure.snip1200.hover p {
   color: #555;
   line-height: 1.6;
 }
+ceo-text ul {
+  li{
+  font-size: 16px;
+  color: #555;
+}
+}
 
 @media (max-width: 768px) {
   .ceo-container{
@@ -2067,6 +2087,11 @@ figure.snip1200.hover p {
   .ceo-wrapper{
     display: flex;
     flex-direction: column;
+    gap: 1rem;
+  }
+  .teammember-wrapper{
+    display: flex;
+    flex-direction: column-reverse;
     gap: 1rem;
   }
   .core-team-container {
