--- a/style.css
+++ b/style.css
@@ -2075,7 +2075,7 @@ figure.snip1200.hover p {
 
 .ceo-container {
   width: 100%;
-  margin: 0 auto;
+  margin: 30px auto;
   padding: 20px;
   background-color: #f9f9f9;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
